--- a/themes/newsroom/assets/sass/_variables.sass
+++ b/themes/newsroom/assets/sass/_variables.sass
@@ -17,7 +17,7 @@ html
   --bg-dark: #000
   --text: var(--dark)
   --font: 'Metropolis', sans-serif
-  --theme: rgb(52,199,89) // #04a763
+  --theme: #496785// #04a763
   --ease: cubic-bezier(.19,1,.22,1)
 
   @mixin darkmode
