Added dark mode

--- a/themes/newsroom/assets/sass/_components.sass
+++ b/themes/newsroom/assets/sass/_components.sass
@@ -1,7 +1,12 @@
 .article
-  box-shadow: 0 0.5rem 2rem rgba(0,0,0,0.12)
+  box-shadow: 0 0 1.5rem rgba(36, 200, 212, 0.719)
   overflow: hidden
   border-radius: 0.5rem
+  box-sizing: 1px
+  border: none
+  border: 1px solid #00ffffa4
+  border-radius: 10px
+
   &_title
     margin: 0
   &_excerpt
@@ -183,7 +188,8 @@
 
   a
     color:var(--theme)
-    opacity: 0.8
+    opacity: 1
+    color: #00ffff
     transition: opacity 0.3s ease-in-out
     &:hover
       text-decoration: underline
