--- a/themes/newsroom/assets/sass/_utils.sass
+++ b/themes/newsroom/assets/sass/_utils.sass
@@ -79,10 +79,12 @@
 
 
 .attribution
-  opacity: 0.33
+  color: #fff
   font-size: 0.8rem
-  transition: opacity 0.25 var(--ease)
+  text-transform: none
+  
   &:hover
+    
     opacity: 1
 
 .mt
