New blog post code

--- a/themes/newsroom/assets/sass/_components.sass
+++ b/themes/newsroom/assets/sass/_components.sass
@@ -1,10 +1,10 @@
 .article
-  box-shadow: 0 0 1.5rem rgba(36, 200, 212, 0.719)
+  box-shadow: 0 0 1.5rem rgba(89,131,252,1.000)
   overflow: hidden
   border-radius: 0.5rem
   box-sizing: 1px
   border: none
-  border: 1px solid #00ffffa4
+  border: 1px solid #5983FC
   border-radius: 10px
 
   &_title
@@ -189,7 +189,7 @@
   a
     color:var(--theme)
     opacity: 1
-    color: #00ffff
+    color: #46bbf4
     transition: opacity 0.3s ease-in-out
     &:hover
       text-decoration: underline
