--- a/themes/newsroom/assets/sass/_variables.sass
+++ b/themes/newsroom/assets/sass/_variables.sass
@@ -14,10 +14,10 @@ html
   --bubble: rgb(16,16,18)
   --accent: var(--gray)
   --bg: var(--light)
-  --bg-dark: #000
+  --bg-dark: #141E30
   --text: var(--dark)
   --font: 'Metropolis', sans-serif
-  --theme: #496785// #04a763
+  --theme: #5983FC// #04a763
   --ease: cubic-bezier(.19,1,.22,1)
 
   @mixin darkmode
@@ -26,7 +26,7 @@ html
     --bg: var(--bg-dark)
     --text: var(--light)
     --accent: var(--bubble)
-    --theme: rgb(0,255,255) //rgb(24,175,119)
+    --theme: rgb(70,187,244)
 
 
     main p
